Refactor agent step command metadata to per-field merge and validation
(cherry picked from commit 2a9e08df032c8baef9b14a581f42f8e04b0c846e)